竖直导航和水平导航

--- a/app/src/main/res/drawable/layer_singeline_bottom.xml
+++ b/app/src/main/res/drawable/layer_singeline_bottom.xml
@@ -8,11 +8,9 @@
             <solid android:color="@color/colorAccent"/>
         </shape>
     </item>
-
-    <!--上面一层距离底层的顶部1dp,类似marginTop,填充色为白色，这样就形成了一个带有蓝色顶部边线的白色背景的图-->
     <item android:bottom="1dp">
         <shape>
-            <solid android:color="#000"/>
+            <solid android:color="@color/colorGraySpr2"/>
         </shape>
     </item>
 </layer-list>
