--- a/app/src/main/res/drawable/radiobtn_unchecked_style.xml
+++ b/app/src/main/res/drawable/radiobtn_unchecked_style.xml
@@ -5,7 +5,7 @@
         android:radius="15dp"/>
 
     <solid
-        android:color="@color/black"/>
+        android:color="@color/colorGraySpr2"/>
 
     <size
         android:height="15dp"
