--- a/app/src/main/res/layout/camera_set_fragment_layout.xml
+++ b/app/src/main/res/layout/camera_set_fragment_layout.xml
@@ -6,6 +6,8 @@
     android:background="@color/black">
 
     <LinearLayout
+        android:layout_marginLeft="10dp"
+        android:layout_marginRight="10dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical">
@@ -23,9 +25,7 @@
                 style="@style/SSwitchStyle"/>
         </RelativeLayout>
         <View
-            android:layout_width="match_parent"
-            android:layout_height="1dp"
-            android:background="@color/white"/>
+            style="@style/SViewStyle"/>
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="@dimen/setting_rl_height"
@@ -43,9 +43,7 @@
                 />
         </RelativeLayout>
         <View
-            android:layout_width="match_parent"
-            android:layout_height="1dp"
-            android:background="@color/white"/>
+            style="@style/SViewStyle"/>
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="@dimen/setting_rl_height"
@@ -63,9 +61,7 @@
                 />
         </RelativeLayout>
         <View
-            android:layout_width="match_parent"
-            android:layout_height="1dp"
-            android:background="@color/white"/>
+            style="@style/SViewStyle"/>
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="@dimen/setting_rl_height"
@@ -81,9 +77,7 @@
                 style="@style/SSwitchStyle"/>
         </RelativeLayout>
         <View
-            android:layout_width="match_parent"
-            android:layout_height="1dp"
-            android:background="@color/white"/>
+            style="@style/SViewStyle"/>
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="@dimen/setting_rl_height"
@@ -99,9 +93,7 @@
                 style="@style/SSwitchStyle"/>
         </RelativeLayout>
         <View
-            android:layout_width="match_parent"
-            android:layout_height="1dp"
-            android:background="@color/white"/>
+            style="@style/SViewStyle"/>
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="@dimen/setting_rl_height"
@@ -119,9 +111,7 @@
                 />
         </RelativeLayout>
         <View
-            android:layout_width="match_parent"
-            android:layout_height="1dp"
-            android:background="@color/white"/>
+            style="@style/SViewStyle"/>
         <TextView
             android:id="@+id/g_reset_all_set_tv"
             style="@style/STextViewStyle"
