--- a/app/src/main/res/layout/voice_set_fragment_layout.xml
+++ b/app/src/main/res/layout/voice_set_fragment_layout.xml
@@ -6,10 +6,11 @@
     android:background="@color/black">
 
     <LinearLayout
+
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="5dp"
-        android:layout_marginRight="5dp"
+        android:layout_marginLeft="10dp"
+        android:layout_marginRight="10dp"
         android:orientation="vertical">
 
         <RelativeLayout
@@ -28,9 +29,7 @@
         </RelativeLayout>
 
         <View
-            android:layout_width="match_parent"
-            android:layout_height="1dp"
-            android:background="@color/white"/>
+            style="@style/SViewStyle"/>
 
         <RelativeLayout
             android:layout_width="match_parent"
@@ -58,9 +57,7 @@
         </RelativeLayout>
 
         <View
-            android:layout_width="match_parent"
-            android:layout_height="1dp"
-            android:background="@color/white"/>
+            style="@style/SViewStyle"/>
 
         <RelativeLayout
             android:layout_width="match_parent"
@@ -77,9 +74,7 @@
         </RelativeLayout>
 
         <View
-            android:layout_width="match_parent"
-            android:layout_height="1dp"
-            android:background="@color/white"/>
+            style="@style/SViewStyle"/>
 
         <RelativeLayout
             android:layout_width="match_parent"
@@ -96,9 +91,7 @@
         </RelativeLayout>
 
         <View
-            android:layout_width="match_parent"
-            android:layout_height="1dp"
-            android:background="@color/white"/>
+            style="@style/SViewStyle"/>
 
         <RelativeLayout
             android:layout_width="match_parent"
@@ -115,9 +108,7 @@
         </RelativeLayout>
 
         <View
-            android:layout_width="match_parent"
-            android:layout_height="1dp"
-            android:background="@color/white"/>
+            style="@style/SViewStyle"/>
 
         <RelativeLayout
             android:layout_width="match_parent"
@@ -134,9 +125,7 @@
         </RelativeLayout>
 
         <View
-            android:layout_width="match_parent"
-            android:layout_height="1dp"
-            android:background="@color/white"/>
+            style="@style/SViewStyle"/>
 
         <RelativeLayout
             android:layout_width="match_parent"
@@ -164,9 +153,7 @@
         </RelativeLayout>
 
         <View
-            android:layout_width="match_parent"
-            android:layout_height="1dp"
-            android:background="@color/white"/>
+            style="@style/SViewStyle"/>
 
         <RelativeLayout
             android:layout_width="match_parent"
@@ -194,9 +181,7 @@
         </RelativeLayout>
 
         <View
-            android:layout_width="match_parent"
-            android:layout_height="1dp"
-            android:background="@color/white"/>
+            style="@style/SViewStyle"/>
 
         <RelativeLayout
             android:layout_width="match_parent"
@@ -223,10 +208,6 @@
                 android:textColor="@color/white"/>
         </RelativeLayout>
 
-        <View
-            android:layout_width="match_parent"
-            android:layout_height="1dp"
-            android:background="@color/white"/>
     </LinearLayout>
 
 </ScrollView>
