--- a/app/src/main/res/values/style.xml
+++ b/app/src/main/res/values/style.xml
@@ -28,17 +28,26 @@
         <item name="android:paddingLeft">5dp</item>
         <item name="android:layout_alignParentEnd">true</item>
         <item name="android:layout_alignParentRight">true</item>
-        <item name="android:thumb">@drawable/switch_thumb_selector</item>
-        <item name="android:track">@drawable/switch_track_selector</item>
+        <item name="android:thumb">@drawable/selector_switch_thumb</item>
+        <item name="android:track">@drawable/selector_switch_track</item>
     </style>
 
     <style name="STextViewStyle">
-
         <item name="android:layout_width">wrap_content</item>
         <item name="android:layout_height">match_parent</item>
+        <item name="android:clickable">true</item>
         <item name="android:gravity">center</item>
         <item name="android:textColor">@color/white</item>
         <item name="android:textSize">12sp</item>
+    </style>
+    <!--<View-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="1dp"-->
+        <!--android:background="@color/white"/>-->
+    <style name="SViewStyle">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">1dp</item>
+        <item name="android:background">@color/colorGray</item>
     </style>
 
     <style name="SEditTextStyle">
