--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -200,5 +200,15 @@
         <item>竖拍模式</item>
         <item>曝光锁定/解锁</item>
     </string-array>
+    <string-array name="array_title">
+        <item>Andorid O Developer Preview</item>
+        <item>Build for a Multi-Screen World</item>
+        <item>Build Beautiful Apps</item>
+    </string-array>
 
+    <string-array name="array_content">
+        <item>An early look at the next version of Android for testing, development, and feedback. Get your apps ready for Android O!</item>
+        <item>Android runs on billions of handheld devices around the world, and it now supports these exciting, new form-factors.</item>
+        <item>Resources to get you started with designing and developing for Android.</item>
+    </string-array>
 </resources>
