--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,7 +6,7 @@
     <color name="blue">#3db5de</color>
     <color name="black">#99000000</color>
     <color name="white">#ffffff</color>
-    <color name="colorGray">#999999</color>
+    <color name="colorGray">#bdf4f1f1</color>
     <color name="colorGraySpr">#666666</color>
     <color name="colorGraySpr2">#282828</color>
     <color name="tab_normal_color">#99ffffff</color>
