--- a/app/src/main/res/layout/pager_error.xml
+++ b/app/src/main/res/layout/pager_error.xml
@@ -13,7 +13,8 @@
         <ImageView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:src="@drawable/ic_error_page"/>
+            android:src="@drawable/ic_error_page"
+            />
 
         <Button
             android:id="@+id/error_btn_retry"
